# travelagent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
_bmad/: config.toml  config.user.toml
_bmad-output/: project-context.md
_bmad-output/planning-artifacts/prds/prd-travelagent-2026-06-27/: .memlog.md  prd.md
_bmad/_config/: files-manifest.csv  manifest.yaml  skill-manifest.csv
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
_bmad/tea/: config.yaml
src/travelagent/: config.py  runtime.py
src/travelagent/agents/: budget.py  coordinator.py  destination.py  itinerary.py  packing.py  places.py  transportation.py
src/travelagent/schemas/: budget.py  destination.py  places.py  transportation.py  travel.py
src/travelagent/tools/: accommodation.py  activities.py  budget.py  geocode.py  mock_tools.py  restaurants.py  routing.py  search.py
